src/test/ui/parser/issue-14303-struct.stderr
error: lifetime parameters must be declared prior to type parameters
  --> $DIR/issue-14303-struct.rs:13:17
   |
LL | struct X<'a, T, 'b> {
   |                 ^^

error: aborting due to previous error

